Fix alignment in header cards

--- a/ui/projects/businessgate/src/app/cards/stack-header-card/stack-header-card.component.less
+++ b/ui/projects/businessgate/src/app/cards/stack-header-card/stack-header-card.component.less
@@ -14,7 +14,9 @@
         .content {
             width: 100%;
             height: 100%;
-            padding: 20px 16px;
+            padding: 8px;
+            overflow: hidden;
+            max-height: 100%;
         
             display: flex;
             flex-flow: column;
@@ -23,6 +25,7 @@
             text-align: right;
         
             > .title {
+                max-height: 100%;
                 h1, h2 {
                     .font2;
                     font-size: 24px;
